@@ -4,15 +4,15 @@ import java.io.Closeable;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.List;
-import java.util.Map;
 import java.util.function.Function;
 
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.jetbrains.java.decompiler.main.Fernflower;
 import org.jetbrains.java.decompiler.main.extern.IFernflowerPreferences;
 
 public final class Decompiler implements Closeable {
-	private static final Map<String, Object> OPTIONS = Map.of(
+	private static final ImmutableMap<String, Object> OPTIONS = ImmutableMap.of(
 		IFernflowerPreferences.ASCII_STRING_CHARACTERS, "1",
 		IFernflowerPreferences.INDENT_STRING, "\t",
 		IFernflowerPreferences.SYNTHETIC_NOT_SET, "1"
@@ -32,7 +32,7 @@ public final class Decompiler implements Closeable {
 
 	public static void main(String[] args) throws IOException {
 		var deobOutput = Paths.get("nonfree/code/deob");
-		var sources = List.of(
+		var sources = ImmutableList.of(
 			deobOutput.resolve("runescape_gl.jar"),
 			deobOutput.resolve("jaggl.jar"),
 			deobOutput.resolve("jaggl_dri.jar"),
@@ -49,9 +49,9 @@ public final class Decompiler implements Closeable {
 
 	private final DecompilerIo io;
 	private final Fernflower fernflower;
-	private final List<Path> sources;
+	private final ImmutableList<Path> sources;
 
-	public Decompiler(List<Path> sources, Function<String, Path> destination) {
+	public Decompiler(ImmutableList<Path> sources, Function<String, Path> destination) {
 		this.io = new DecompilerIo(destination);
 		this.fernflower = new Fernflower(io, io, OPTIONS, Slf4jFernflowerLogger.INSTANCE);
 		this.sources = sources;
